--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -8,6 +8,7 @@
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
     color: #fff;
+    overflow: hidden;
 
     .main-cont{
         width: 80%;
