--- a/src/components/sectors/sectors.scss
+++ b/src/components/sectors/sectors.scss
@@ -9,6 +9,7 @@
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
     color: #fff;
+    overflow: hidden;
 
     h2{
         font-weight: 700;
