--- a/src/components/capabilities/capabilities.scss
+++ b/src/components/capabilities/capabilities.scss
@@ -9,6 +9,7 @@
     font-style: normal;
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
+    overflow: hidden;
 
     .cont1{
         text-align: center;
