--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,39 +1,60 @@
 .intro{
-   
     position: relative;
     margin-top: -100px;
+    overflow: hidden;
     height: 100vh;
 
-    background-image: url("../../assets/factory.png") !important;
+/*     background-image: url("../../assets/factory.png") !important;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
+
+    
+
+    img{
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        z-index: -1;
+    }
+
+    video{
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        z-index: -1;
+    }
     
 
     .bgImg{
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         background: linear-gradient(to bottom, #000, transparent, #000);
         opacity: 0.5;
-        
+        position: absolute;
+        top: 0; 
+        left: 0;
     }
 
     .slogan{
-        position: absolute;
-        bottom: 150px;
-        left: 100px;
         color: #fff;
-        width: 50%;
+        width: 800px;
         font-style: normal;
         font-family: "Space Grotesk", sans-serif;
         font-optical-sizing: auto;
         font-weight: 700;
-  
+        margin-top: -150px;
 
         h1{
+            position: absolute;
             font-size: 80px;
+            bottom: 40%;
+            left: 15%;
         }
 
         p{
+            position: absolute;
+            left: 15%;
             font-size: 16px;
             font-weight: 400;
         }
@@ -42,26 +63,31 @@
 
     .fifty-years{
         position: absolute;
-        bottom: 50px;
-        right: 100px;
+        bottom: 10%;
+        right: 10%;
         display: flex;
         justify-content: end;
         align-items: center;
         flex-direction: column;
         z-index: 111;
+        width: 200px;
+        height: 100px;
 
         .icons{
             display: flex;
             justify-content: end;
             align-items: center;
-            width: 100%;
+            width: 200px;
+            height: 100px;
 
             .icon{
                 display: flex;
                 justify-content: end;
                 position: relative;
-                width: 150px;
                 margin-bottom: 10px;
+                object-fit: contain;
+                width: 100%;
+                height: 100%;
             }
 
         }
