--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,18 +3,24 @@
     height: 100px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    z-index: 10;
+    z-index: 11111;
     background-color: transparent;
+    overflow: hidden;
 
     .logo-cont{
         margin-left: 40px;
+        margin-top: 20px;
         
         .logo{
-            width: 180px;
+            width: 180px;   
+
+            @media (max-width: 1100px) {
+                width: 150px;
+            }
             
         }
     
@@ -35,6 +41,11 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            margin-top: 5px;
+
+            @media (max-width: 800px) {
+                display: none;
+            }
             
     
             .menus{
@@ -48,6 +59,11 @@
                     font-size: 16px;
                     color: #fff;
                     margin-right: 30px;
+
+                    @media (max-width: 1100px) {
+                        margin-right: 10px;
+                        font-size: 13px;
+                    }
                     
                 }
             }
@@ -57,6 +73,11 @@
                 margin-right: 50px;
                 border-left: 1px solid #fff;
                 padding-left: 20px;
+
+                @media (max-width: 1100px) {
+                    padding-left: 10px;
+                    margin-right: 20px;
+                }
                 
 
                 .arrow-down{
@@ -70,8 +91,8 @@
                 }
             }
         }
-    
-        .hamburgerMenu{
+
+        .hamburger{
             width: 100px;
             height: 100px;
             display: flex;
@@ -79,22 +100,118 @@
             align-items: center;
             flex-direction: column;
             background-color: #B72222;
+
+            @media (max-width: 1100px) {
+                width: 70px;
+                height: 70px;
+            }
     
-            .lines{
+            .hambList{
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 flex-direction: column;
-                margin-top: -15px;
+                gap:10px;
                 
-    
-                span{
+                .hamb{
+                    list-style-type: none;
+                    transform-origin: left;
+                    transition: all 2s ease;
+
                     width: 30px;
                     height: 1px;
-                    padding-bottom: 10px;
                     border-bottom: 1px solid #fff;
+
+                    @media (max-width: 1100px) {
+                        width: 25px;
+                    }
+                }
+            }
+    
+            &.active{
+                
+
+                .hambList {
+                    
+                    .hamb{
+                        &:first-child{
+                            transform: rotate(25deg);
+                        }
+                        &:last-child{
+                            transform: rotate(-25deg);
+                        }
+                    }
+                }
+        
+        
+            }
+        }
+
+        .menuListList{
+            width: 250px;
+            height: calc(100vh - 100px);
+            position: fixed;
+            top: 100px;
+            right: -250px;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: #15141C;
+            transition: all 1s ease;
+
+            @media (max-width: 1100px) {
+                top: 70px;
+            }
+            
+        
+            &.active {
+                right: 0;
+            }
+        
+            ul{
+                margin-top: -150px;
+                padding: 0;
+                list-style: none;
+                font-size: 30px;
+                font-weight: 300;
+                width: 60%;
+
+                @media (max-width: 1100px) {
+                    font-size: 16px;
+                }
+                
+                .menu1{
+                    margin-bottom: 25px;
+
+                    a{
+                        text-decoration: none;
+                        color: white;
+                        font-size: inherit;
+                    }
+        
+                    &:hover{
+                        font-weight: 500;
+                    }
                     
                 }
             }
+            
         }
+
+        .active{
+            background-color: #15141C;
+            border-bottom: none;
+            transition: all .36s !important;
+            color: #fff;
+        }
+
+        .link{
+            text-decoration: none;
+            color: inherit
+        }
+        
 
 
     }
