--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -11,6 +11,10 @@
     background-color: transparent;
     overflow: hidden;
 
+    @media (max-width: 1100px) {
+        height: 70px;
+    }
+
     .logo-cont{
         margin-left: 40px;
         margin-top: 20px;
