--- a/src/components/capabilities/capabilities.scss
+++ b/src/components/capabilities/capabilities.scss
@@ -18,7 +18,21 @@
             font-weight: 700;
             font-size: 70px;
             margin-top: 50px;
+
+            @media (max-width: 1100px) {
+                font-size: 60px;
+            }
+
+            @media (max-width: 850px) {
+                font-size: 50px;
+            }
+
+            @media (max-width: 575px) {
+                font-size: 40px;
+            }
         }
+
+        
 
         p{
             font-weight: 100;
@@ -36,12 +50,25 @@
         margin-bottom: 50px;
         width: 100vw;
 
+        @media (max-width: 870px) {
+            flex-direction: column;
+            gap: 20px;
+        }
+
         .cont-area{
             width: 32.5%;
             height: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
+
+            @media (max-width: 940px) {
+                height: 250px;
+            }
+
+            @media (max-width: 870px) {
+                width: 100%;
+            }
 
             .contIn{
                 width: 100%;
@@ -56,13 +83,31 @@
 
                 h4{
                     font-size: 25px;
+
+                    @media (max-width: 940px) {
+                        font-size: 20px;
+                    }
+
+                    @media (max-width: 870px) {
+                        font-size: 25px ;
+                    }
                 }
 
                 .contIn1a{
                     width: 100%;
+                    height: 20%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+
+                    @media (max-width: 940px) {
+                        height: 30%;
+                    }
+
+                    @media (max-width: 870px) {
+                        justify-content: space-between;
+                        height: 20%;
+                    }
 
                     p{
                         font-size: 13px;
@@ -93,19 +138,19 @@
         }
 
         .cont1A{
-            background-image: url("../../assets/otomotiv.png");
+            background-image: url("../../assets/otomotiv.png") !important;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
         }
         .cont2A{
-            background-image: url("../../assets/Melting.png");
+            background-image: url("../../assets/Melting.png") !important;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
         }
         .cont3A{
-            background-image: url("../../assets/Die Casting.png");
+            background-image: url("../../assets/Die Casting.png") !important;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
