--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -17,22 +17,53 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        width: 60%;
+        width: 100%;
         color: #fff;
         margin-top: 100px;
+
+        @media (max-width: 500px) {
+            width: 90%;
+        }
         
-
-    
-
         h2{
             font-weight: 700;
             font-size: 70px;
+
+            @media (max-width: 850px) {
+                font-size: 50px;
+            }
+
+            @media (max-width: 700px) {
+                font-size: 40px;
+            }
+
+            @media (max-width: 500px) {
+                font-size: 30px;
+            }
+
+            @media (max-width: 450px) {
+                font-size: 25px;
+            }
+
         }
         p{
             text-align: center;
             font-size: 13px;
             margin: 0 50px;
             color: #C1C1C1;
+            width: 50%;
+
+            @media (max-width: 850px) {
+                width: 60%;
+            }
+
+            @media (max-width: 700px) {
+                width: 70%;
+            }
+
+            @media (max-width: 500px) {
+                width: 80%;
+            }
         }
     }
 
@@ -52,8 +83,23 @@
             width: 30px;
 
             img{
-                
                 width: 30px;
+
+                @media (max-width: 1000px) {
+                    width: 25px;
+                }
+
+                @media (max-width: 1000px) {
+                    width: 20px;
+                }
+
+                @media (max-width: 850px) {
+                    width: 15px;
+                }
+    
+                @media (max-width: 700px) {
+                    width: 10px;
+                }
             }
         }
         
@@ -119,6 +165,18 @@
 
             img{
                 width: 50px;
+
+                @media (max-width: 850px) {
+                    width: 40px;
+                }
+    
+                @media (max-width: 700px) {
+                    width: 35px;
+                }
+    
+                @media (max-width: 500px) {
+                    width: 30px;
+                }
             }
         }
         
