--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -18,6 +18,11 @@
         margin-top: 100px;
         flex-direction: column;
 
+        @media (max-width: 1250px) {
+            width: 90%;
+        }
+
+
         .header{
             width: 100%;
             display: flex;
@@ -38,6 +43,14 @@
 
                 h4{
                     font-size: 40px;
+
+                    @media (max-width: 850px) {
+                        font-size: 30px;
+                    }
+
+                    @media (max-width: 500px) {
+                        font-size: 20px;
+                    }
                 }
             }
 
@@ -46,6 +59,14 @@
                 justify-content: center;
                 align-items: center;
                 height: 62px;
+
+                @media (max-width: 850px) {
+                    height: 50px;
+                }
+
+                @media (max-width: 500px) {
+                    height: 40px;
+                }
 
                 button{
                     background-color: transparent;
@@ -56,11 +77,27 @@
                     &:nth-child(1){
                         width: 133px;
                         height: 100%;
+
+                        @media (max-width: 850px) {
+                            width: 100px;
+                        }
+
+                        @media (max-width: 500px) {
+                            width: 80px;
+                        }
                     }
 
                     &:nth-child(2){
                         width: 70px;
                         height: 100%;
+
+                        @media (max-width: 850px) {
+                            width: 50px;
+                        }
+
+                        @media (max-width: 500px) {
+                            width: 40px;
+                        }
                     }
                 }
             }
@@ -82,12 +119,52 @@
                 justify-content: center;
                 align-items: center;
                 position: relative;
+
+                @media (max-width: 1110px) {
+                    width: 31.5%;
+                }
+
+                @media (max-width: 810px) {
+                    width: 30%;
+                    height: 300px;
+                }
+
+                @media (max-width: 600px) {
+                    width: 48%;
+                }
+
+                @media (max-width: 560px) {
+                    width: 47%;
+                    height: 250px;
+                }
+
+                @media (max-width: 370px) {
+                    width: 46.5%;
+                    height: 200px;
+                }
+
+                
                 
 
                 img{
                     object-fit: contain;
                     width: 200px;
                     height: 200px;
+
+                    @media (max-width: 810px) {
+                        width: 150px;
+                        height: 150px;
+                    }
+
+                    @media (max-width: 560px) {
+                        width: 120px;
+                        height: 120px;
+                    }
+
+                    @media (max-width: 370px) {
+                        width: 100px;
+                        height: 100px;
+                    }
                 }
 
                 .product-info{
@@ -95,12 +172,25 @@
                     left:20px;
                     bottom: 20px;
 
-                    h4{
+                    @media (max-width: 370px) {
+                        bottom: 5px;
+                    }
 
+                    h4{
+                        font-size: 15px;
+
+                        @media (max-width: 500px) {
+                            font-size: 13px;
+                        }
                     }
 
                     p{
                         color: #B72222;
+                        font-size: 15px;
+
+                        @media (max-width: 500px) {
+                            font-size: 13px;
+                        }
                     }
                 }
             }
