--- a/src/components/sectors/sectors.scss
+++ b/src/components/sectors/sectors.scss
@@ -15,6 +15,14 @@
         font-weight: 700;
         font-size: 70px;
         margin-top: 100px;
+
+        @media (max-width: 850px) {
+            font-size: 60px;
+        }
+
+        @media (max-width: 575px) {
+            font-size: 50px;
+        }
     }
 
     .sector-info{
@@ -24,15 +32,75 @@
         width: 90%;
         margin-top: 50px;
 
+        @media (max-width: 1300px) {
+            width: 100%;
+            justify-content: center;
+        }
+
+        @media (max-width: 1100px) {
+            flex-direction: column;
+            gap: 20px;
+        }
+
         .sector{
             width:30%;
+            height: 20%;
             display: flex;
             justify-content: center;
             align-items: center;
 
+            @media (max-width: 1300px) {
+                margin-left: 20px;
+            }
+
+            @media (max-width: 1100px) {
+                width: 50%;
+            }
+
+            @media (max-width: 990px) {
+                width: 60%;
+            }
+
+            @media (max-width: 830px) {
+                width: 70%;
+            }
+
+            @media (max-width: 700px) {
+                width: 80%;
+            }
+
+            @media (max-width: 480px) {
+                width: 90%;
+            }
+
+            @media (max-width: 430px) {
+                width: 95%;
+            }
+
             img{
                 height: 100%;
                 object-fit: cover;
+
+                @media (max-width: 1100px) {
+                    width: 300px;
+                    height: 300px;
+                    object-fit: contain;
+                }
+
+                @media (max-width: 700px) {
+                    width: 200px;
+                    height: 200px;
+                }
+
+                @media (max-width: 480px) {
+                    width: 180px;
+                    height: 180px;
+                }
+    
+                @media (max-width: 430px) {
+                    width: 150px;
+                    height: 150px;
+                }
             }
 
             .info{
@@ -41,9 +109,47 @@
                 align-items: start;
                 flex-direction: column;
                 padding-left: 10px;
+                /* min-width: 200px;
+                min-height: 100px;
+
+                @media (max-width: 1300px) {
+                    min-width: 150px;
+                }
+
+                @media (max-width: 700px) {
+                    min-width: 50px;
+                } */
 
                 h4{
                     font-size: 20px;
+
+                    @media (max-width: 1300px) {
+                        font-size: 16px;
+                    }
+
+                    @media (max-width: 1100px) {
+                        font-size: 25px;
+                    }
+
+                    @media (max-width: 700px) {
+                        font-size: 20px;
+                    }
+    
+                    @media (max-width: 480px) {
+                        font-size: 18px;
+                    }
+        
+                    @media (max-width: 430px) {
+                        font-size: 16px;
+                    }
+                }
+
+                p{
+                    font-size: 18px;
+
+                    @media (max-width: 1300px) {
+                        font-size: 13px;
+                    }
                 }
             }
         }
