--- a/src/components/founder/founder.scss
+++ b/src/components/founder/founder.scss
@@ -20,12 +20,17 @@
             width: 90%;
         }
 
+        @media (max-width: 800px) {
+            flex-direction: column;
+            margin-top: 50px;
+        }
+
         .info{
             display: flex;
             justify-content: center;
             align-items: start;
             flex-direction: column;
-            min-width: 300px;
+            
 
             h3{
                 color: #fff;
@@ -40,6 +45,14 @@
                     font-size: 30px;
                 }
 
+                @media (max-width: 800px) {
+                    font-size: 40px;
+                }
+
+                @media (max-width: 460px) {
+                    font-size: 30px;
+                }
+
                 span{
                     font-weight: 400;
                 }
@@ -49,6 +62,10 @@
                 color: #C1C1C1;
                 margin-right: 50px;
                 font-size: 15px;
+
+                @media (max-width: 840px) {
+                    width: 100%;
+                }
             }
             
         }
@@ -59,6 +76,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            @media (max-width: 800px) {
+                margin-top: 30px;
+            }
 
             img{    
 
@@ -72,6 +93,10 @@
                     height: 400px;
                 }
 
+                @media (max-width: 460px) {
+                    width: 300px;
+                    height: 300px;
+                }
                     
             }
         }
