--- a/src/components/contDoc/contDoc.scss
+++ b/src/components/contDoc/contDoc.scss
@@ -17,6 +17,18 @@
         width: 100%;
         position: relative;
         height: 100vh;
+
+        @media (max-width: 1100px) {
+            height: 90vh;
+        }
+
+        @media (max-width: 1000px) {
+            height: 80vh;
+        }
+
+        @media (max-width: 600px) {
+            height: 60vh;
+        }
         
 
         img{
@@ -76,6 +88,10 @@
             align-items: center;
             flex-direction: column;
             margin-top: 300px;
+
+            @media (max-width: 1100px) {
+                margin-top: 200px;
+            }
     
             
     
@@ -87,6 +103,22 @@
                 font-weight: 700;
                 font-size: 70px;
                 text-align: center;
+
+                @media (max-width: 1100px) {
+                    font-size: 60px;
+                }
+
+                @media (max-width: 1000px) {
+                    font-size: 50px;
+                }
+
+                @media (max-width: 600px) {
+                    font-size: 40px;
+                }
+
+                @media (max-width: 600px) {
+                    font-size: 30px;
+                }
             }
     
             .right-side{
@@ -95,6 +127,14 @@
                 align-items: center;
                 height: 62px;
                 margin-top: 100px;
+
+                @media (max-width: 1100px) {
+                    margin-top: 50px;
+                }
+
+                @media (max-width: 1000px) {
+                    margin-top: 40px;
+                }
     
                 button{
                     background-color: transparent;
