--- a/src/components/contDoc/contDoc.scss
+++ b/src/components/contDoc/contDoc.scss
@@ -172,8 +172,31 @@
             align-items: center;
             gap: 2%;
 
+            @media (max-width: 900px) {
+                flex-wrap: wrap;
+            }
+
+            @media (max-width: 800px) {
+                gap: 3%;
+            }
+
             img{
                 width: 21%;
+
+                @media (max-width: 900px) {
+                    width: 33%;
+
+                    &:nth-child(1){
+                        margin-bottom: 20px;
+                    }
+                    &:nth-child(2){
+                        margin-bottom: 20px;
+                    }
+                }
+
+                @media (max-width: 800px) {
+                    width: 40%;
+                }
             }
         }
 
@@ -188,12 +211,43 @@
 
             .logos{
                 display: flex;
-                justify-content: center;
+                justify-content: start;
                 align-items: center;
                 gap: 30px;
+                margin-left: 85px;
+
+                @media (max-width: 1300px) {
+                    gap: 20px;
+                }
+
+                @media (max-width: 800px) {
+                    margin-left: 65px;
+                }
+
+                @media (max-width: 600px) {
+                    margin-left: 50px;
+                    gap: 10px;
+                }
+
+                @media (max-width: 500px) {
+                    margin-left: 30px;
+                }
+
+                @media (max-width: 400px) {
+                    margin-left: 10px;
+                }
 
                 img{
                     width: 15%;
+                    
+
+                    @media (max-width: 1300px) {
+                        width: 12%;
+                    }
+
+                    @media (max-width: 600px) {
+                        width: 18%;
+                    }
 
                     &:nth-child(3){
                         width: 8%;
@@ -205,7 +259,29 @@
                 font-size: 40px;
                 font-weight: 400;
                 width: 300px;
-                padding-right: 40px;
+                margin-right: 40px;
+
+                @media (max-width: 1300px) {
+                    font-size: 30px;
+                }
+
+                @media (max-width: 800px) {
+                    font-size: 25px;
+                }
+
+                @media (max-width: 600px) {
+                    font-size: 20px;
+                }
+
+                @media (max-width: 500px) {
+                    font-size: 15px;
+                    margin-right: 20px;
+                }
+
+                @media (max-width: 400px) {
+                    font-size: 13px;
+                    margin-right: 10px;
+                }
             }
         }
     }
