--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -163,6 +163,7 @@
             align-items: center;
             flex-direction: column;
             background: #15141C;
+            opacity: 0.9;
             transition: all 1s ease;
 
             @media (max-width: 1100px) {
