--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -320,12 +320,19 @@
             }
 
             .logoFd{
-                img{
+                /* img{
     
                     @media (max-width: 900px) {
                         width: 150px;
                     }
+                } */
+
+                .logo-cont2{
+                    font-family: "Poppins", sans-serif;
+                    font-weight: 400;
+                    font-style: normal;
                 }
+
                 p{
                     color: #ADADB9;
                     margin-top: 20px;
