--- a/src/components/founder/founder.scss
+++ b/src/components/founder/founder.scss
@@ -82,6 +82,7 @@
             }
 
             img{    
+                border-radius: 50%;
 
                 @media (max-width: 1020px) {
                     width: 350px;
