--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,6 +4,7 @@
     overflow: hidden;
     height: 100vh;
 
+
     @media (max-width: 800px) {
         height: 80vh;
     }
@@ -149,6 +150,23 @@
                 object-fit: contain;
                 width: 100%;
                 height: 100%;
+            }
+
+            .title{
+                top: 0px;
+                left: 100px;
+                font-size: 15px;
+
+                @media (max-width: 1100px) {
+                    left: 70px;
+                    font-size: 10px;
+                }
+    
+                @media (max-width: 850px) {
+                    top: 5px;
+                    left: 60px;
+                }
+
             }
 
         }
