--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -24,6 +24,7 @@
 
             @media (max-width: 1100px) {
                 width: 150px;
+                margin-top: -10px;
             }
             
         }
